--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.3.3
 Flask-Login==0.6.2
 Flask-Session==0.5.0
 Flask-SQLAlchemy==3.1.1
+Werkzeug<3.0.0
 gunicorn==21.2.0
 msal==1.24.0
 toml==0.10.2
